# lenet

./: .env  DEVELOPMENT.md  QUICKSTART.md  README.md  bash.exe.stackdump  lenet5.ipynb  pyproject.toml  setup.bat  setup.sh  test_backend.py
backend/: __init__.py
backend/api/: core.py  models.py  server.py
core/: webcam_mediapipe.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: CameraStream.jsx  DataBlock.jsx  ExpressionRegister.jsx  FaceOverlay.jsx  LatencyGraph.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: Dashboard.jsx
frontend/src/utils/: canvasUtils.js
models/: lenet5_mnist.pth
